--- a/index2 copia.html
+++ b/index2 copia.html
@@ -50,6 +50,17 @@
             </div>
         </div>
         <div>
+            <fieldset>
+                <legend>Accetta termini e condizioni</legend>
+                <div>
+                    <input type="radio" name="termini" id="termini e condizioni"> <span>Termini</span>
+                    <div>
+                    <input type="radio" name="Condizioni" id="termini e condizioni"> <span>Condizioni</span>
+                    </div>
+                </div>
+            </fieldset>
+        </div>
+        <div>
             <button type="submit">Invia registazione</button>
         </div> 
     </div>
